# ML-Model-Learner

./: .replit  README.md  app.py  pyproject.toml  replit.md  requirements.txt
.streamlit/: config.toml
algorithms/: __init__.py  decision_trees.py  kmeans.py  linear_regression.py  logistic_regression.py  neural_networks.py
utils/: data_utils.py  plot_utils.py
