[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "algorithms>=0.1.4",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "streamlit>=1.49.1",
]
